# Documentation-Crawler

./: .replit  DEPLOYMENT_GUIDE.md  README.md  bugfix.md  comprehensive-bugfix-analysis.md  comprehensive-fix-plan.md  comprehensive-flow-analysis.md  comprehensive-real-bugfix.md  console-analysis-summary.md  console-flow-analysis.md  crawler_app.py  fix-plan-detailed.md  fix-plan.md  implementation-status-report.md  main.py  pyproject.toml  replit.md  single-document-bugfix.md  single-document-fix-plan.md  step-by-step-fix-plan.md  test-results-summary.md  test_frontend.md
attached_assets/: Pasted--Add-these-methods-to-your-CrawlerWebInterface-class-in-crawler-app-py-def-init-self-session--1753229275502_1753229275502.txt  Pasted--Add-this-configuration-presets-section-in-the-advanced-options-area-Place-it-right-aft-1753229232246_1753229232247.txt  Pasted--Add-this-enhanced-error-handling-system-to-your-CrawlerInterface-class-Replace-the-existing-ad-1753229144311_1753229144312.txt  Pasted--Add-this-statistics-dashboard-after-the-progress-container-in-crawler-interface-html-P-1753229179788_1753229179788.txt  Pasted--app-route-api-start-crawling-methods-POST-def-start-crawling-Start-a-new-crawlin-1753228172366_1753228172366.txt  Pasted--script-Initialize-Feather-icons-feather-replace-class-CrawlerInterf-1753227629646_1753227629646.txt  Pasted-6-Add-Session-Recovery-on-Page-Reload-In-templates-crawler-interface-html-add-this-to-the-construc-1753228238027_1753228238027.txt  Pasted-validateFormData-console-log-VALIDATION-Starting-form-validation--1753228184769_1753228184769.txt  (+4 more)
(+20 files in other folders)
