[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "colorama>=0.4.6",
    "flask>=3.1.1",
    "google-api-python-client>=2.176.0",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "markdownify>=1.1.0",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
    "trafilatura>=2.0.0",
]
